@@ -88,8 +88,8 @@ public class TsdlQueryService implements QueryService {
     }
 
     // since order preservation is part of the filter contract, we may assume the first element to be the start and the last element to be the end
-    var periodStart = dataPoints.get(0).getTimestamp();
-    var periodEnd = dataPoints.get(dataPoints.size() - 1).getTimestamp();
+    var periodStart = dataPoints.get(0).timestamp();
+    var periodEnd = dataPoints.get(dataPoints.size() - 1).timestamp();
     var period = QueryResult.of(0, periodStart, periodEnd);
 
     if (result.format() == YieldFormat.LONGEST_PERIOD || result.format() == YieldFormat.SHORTEST_PERIOD) {
@@ -116,8 +116,8 @@ public class TsdlQueryService implements QueryService {
 
       case DATA_POINTS:
         var pointsInPeriods = dataPoints.stream()
-            .filter(dp -> containsDataPoint(periods.periods(), dp.getTimestamp()))
-            .toList();
+            .filter(dp -> containsDataPoint(periods.periods(), dp.timestamp()))
+            .collect(Collectors.toList());
         return QueryResult.of(pointsInPeriods);
 
       case SAMPLE:
@@ -191,11 +191,11 @@ public class TsdlQueryService implements QueryService {
 
         if (isLastDataPoint) {
           // if the end of the data is reached, the period must end, too
-          finalizePeriod(detectedPeriods, eventMarkers, eventId, currentDataPoint.getTimestamp());
+          finalizePeriod(detectedPeriods, eventMarkers, eventId, currentDataPoint.timestamp());
         }
       } else {
         // new period starts
-        eventMarkers.put(eventId, currentDataPoint.getTimestamp());
+        eventMarkers.put(eventId, currentDataPoint.timestamp());
       }
 
     } else {
@@ -205,7 +205,7 @@ public class TsdlQueryService implements QueryService {
       if (eventMarkers.containsKey(eventId)) {
         // period ended
         Conditions.checkNotNull(Condition.ARGUMENT, previousDataPoint, "When closing a period, there must be a previous data point.");
-        finalizePeriod(detectedPeriods, eventMarkers, eventId, previousDataPoint.getTimestamp());
+        finalizePeriod(detectedPeriods, eventMarkers, eventId, previousDataPoint.timestamp());
       } else {
         // nothing to do - still no open period
       }
@@ -235,7 +235,7 @@ public class TsdlQueryService implements QueryService {
       );
     }
 
-    var allEventFilters = query.events().stream().flatMap(event -> event.definition().filters().stream()).toList();
+    var allEventFilters = query.events().stream().flatMap(event -> event.definition().filters().stream()).collect(Collectors.toList());
     setThresholdFilterSampleArguments(
         createThresholdFilterStream(allEventFilters),
         sampleValues
@@ -260,17 +260,17 @@ public class TsdlQueryService implements QueryService {
     return Stream.concat(nonNegated, negated);
   }
 
-  @SuppressWarnings("ConstantConditions") // method too complex for this inspection due to the "filterArgument" pattern variable, but logic is fine
   private void setThresholdFilterSampleArguments(Stream<ThresholdFilter> filters, Map<TsdlIdentifier, Double> sampleValues) {
     filters.forEach(thresholdFilter -> {
-      if (!(thresholdFilter.threshold() instanceof TsdlSampleFilterArgument filterArgument)) {
+      if (!(thresholdFilter.threshold() instanceof TsdlSampleFilterArgument)) {
         throw Conditions.exception(Condition.ARGUMENT, "Filter argument must reference a sample (non-literal).");
       }
+      var filterArgument = ((TsdlSampleFilterArgument) thresholdFilter.threshold());
 
       var argumentIdentifier = filterArgument.sample().identifier();
       if (!sampleValues.containsKey(argumentIdentifier)) {
         throw new TsdlEvaluationException(
-            "Sample '%s' referenced by filter has not been computed. Is it declared in the 'SAMPLES' directive?".formatted(
+            String.format("Sample '%s' referenced by filter has not been computed. Is it declared in the 'SAMPLES' directive?",
                 argumentIdentifier.name())
         );
       }
