@@ -1,6 +1,11 @@
 package org.tsdl.implementation.evaluation.impl.connective;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.ToString;
+import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
 import org.tsdl.implementation.model.connective.OrConnective;
 import org.tsdl.implementation.model.filter.SinglePointFilter;
@@ -12,9 +17,16 @@ import org.tsdl.infrastructure.model.DataPoint;
  * Default implementation of {@link OrConnective}.
  */
 @Slf4j
-public record OrConnectiveImpl(List<SinglePointFilter> filters) implements OrConnective {
-  public OrConnectiveImpl {
+@Getter
+@Accessors(fluent = true)
+@EqualsAndHashCode
+@ToString
+public final class OrConnectiveImpl implements OrConnective {
+  private final List<SinglePointFilter> filters;
+
+  public OrConnectiveImpl(List<SinglePointFilter> filters) {
     Conditions.checkNotNull(Condition.ARGUMENT, filters, "List of filters of 'or' connective must not be null.");
+    this.filters = filters;
   }
 
   @Override
@@ -30,7 +42,7 @@ public record OrConnectiveImpl(List<SinglePointFilter> filters) implements OrCon
 
     var filteredList = data.stream()
         .filter(this::isSatisfied)
-        .toList();
+        .collect(Collectors.toList());
 
     log.debug("After evaluating 'or' connective, {} data points are remaining.", filteredList.size());
     return filteredList;
