@@ -10,10 +10,14 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Valid;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -36,6 +40,7 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 import org.tsdl.implementation.evaluation.TsdlEvaluationException;
 import org.tsdl.service.web.infrastructure.ExceptionHandlerControllerAdvice.ValidationErrorsHolder.ValidationError;
+import org.tsdl.storage.TsdlStorageException;
 
 /**
  * Advice for REST controllers that registers exception handlers for when a validation performed by Spring or Hibernate fails or when query evaluation
@@ -78,7 +83,7 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
                   fieldError.getRejectedValue(),
                   !StringUtils.hasText(errorMessage) ? fieldError.getDefaultMessage() : errorMessage);
             })
-            .toList(),
+            .collect(Collectors.toList()),
         getPath(request));
 
     return handleExceptionInternal(ex, errorHolder, new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
@@ -102,7 +107,7 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
                 violation.getPropertyPath().toString(),
                 violation.getInvalidValue(),
                 violation.getMessage()))
-            .toList(),
+            .collect(Collectors.toList()),
         request.getRequestURI());
   }
 
@@ -114,7 +119,7 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
    */
   @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
   @ResponseBody
-  @ExceptionHandler(TsdlEvaluationException.class)
+  @ExceptionHandler({TsdlEvaluationException.class, TsdlStorageException.class})
   public Map<String, Object> evaluationException(WebRequest request) {
     var errorResponse = errorCollector.getErrorAttributes(request, ErrorAttributeOptions.defaults());
     errorResponse.put("error", HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase());
@@ -137,13 +142,13 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
     var errors = new ValidationErrorsHolder(Instant.now().atZone(ZoneOffset.UTC), path);
     errors.setErrors(errorCollector.get());
 
-    log.error("Input validation failed with %d errors: %s".formatted(errors.getValidationErrors().size(), errors));
+    log.error(String.format("Input validation failed with %d errors: %s", errors.getValidationErrors().size(), errors));
     return errors;
   }
 
   private String getPath(WebRequest webRequest) {
-    return webRequest instanceof ServletWebRequest servletWebRequest
-        ? servletWebRequest.getRequest().getRequestURI()
+    return webRequest instanceof ServletWebRequest
+        ? ((ServletWebRequest) webRequest).getRequest().getRequestURI()
         : "<unknown>";
   }
 
@@ -187,7 +192,7 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
 
     @Override
     public String toString() {
-      return "{%s}".formatted(getValidationErrorsRepresentation());
+      return String.format("{%s}", getValidationErrorsRepresentation());
     }
 
     private String getValidationErrorsRepresentation() {
@@ -203,15 +208,21 @@ public class ExceptionHandlerControllerAdvice extends ResponseEntityExceptionHan
     }
 
     @Schema(description = "Encapsulates information about a validation error.")
-    record ValidationError(
-        @Schema(description = "Representation of the object causing the validation error.", example = "storageDto")
-        String rootBean,
-        @Schema(description = "Location of the violating property in the member hierarchy of rootBean.", example = "name")
-        String propertyPath,
-        @Schema(description = "Property value that caused the validation error.", example = "0")
-        Object invalidValue,
-        @Schema(description = "Description of the validation error.", example = "must be greater than 0")
-        String message) {
+    @Getter
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    static class ValidationError {
+      @Schema(description = "Representation of the object causing the validation error.", example = "storageDto")
+      private String rootBean;
+
+      @Schema(description = "Location of the violating property in the member hierarchy of rootBean.", example = "name")
+      private String propertyPath;
+
+      @Schema(description = "Property value that caused the validation error.", example = "0")
+      private Object invalidValue;
+
+      @Schema(description = "Description of the validation error.", example = "must be greater than 0")
+      private String message;
     }
   }
 }
