@@ -39,15 +39,19 @@ public class ExtendedControllerErrorCollector extends DefaultErrorAttributes {
 
   @Override
   public ModelAndView resolveException(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) {
-    log.error("Resolving exception at %s %s".formatted(request.getMethod(), request.getRequestURI()), ex);
+    log.error(String.format("Resolving exception at %s %s", request.getMethod(), request.getRequestURI()), ex);
     return super.resolveException(request, response, handler, ex);
   }
 
   @Override
   public Map<String, Object> getErrorAttributes(WebRequest webRequest, ErrorAttributeOptions options) {
     var errorAttributes = super.getErrorAttributes(webRequest, options);
-
     var errorCause = getError(webRequest);
+
+    if (errorCause == null) {
+      return errorAttributes;
+    }
+
     var errorIndex = 0;
     var errorTrace = new LinkedHashMap<Integer, String>();
     errorTrace.put(errorIndex++, errorCause.getMessage());
